@startuml supported_transformers
!include https://raw.githubusercontent.com/ncosta-ic/catppuccin-macchiato-plantuml-theme/main/theme.puml

hide empty members
left to right direction




package "Transformer Types (Monad Implementations)" {
    class "EitherTMonad<F,L>" as EitherTMonad
    class "MaybeTMonad<F>" as MaybeTMonad
    class "OptionalTMonad<F>" as OptionalTMonad
    class "ReaderTMonad<F, R_ENV>" as ReaderTMonad
    class "StateTMonad<S,F>" as StateTMonad


    EitherTMonad <|.. CoreInterfaces.MonadError
    MaybeTMonad <|.. CoreInterfaces.MonadError
    OptionalTMonad <|.. CoreInterfaces.MonadError
    ReaderTMonad <|.. CoreInterfaces.Monad
    StateTMonad <|.. CoreInterfaces.Monad


    ' Example relation for OptionalT
    OptionalTMonad ..> "Simulation Plumbing.OptionalTKind" : operates on witness
}

@enduml
